[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "rv-script-utils"
description = "Utilities to help make scripts"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.21.1",
    "pytimeparse>=1.1.8",
    "requests>=2.32.3",
    "structlog>=24.4.0",
]
license = {file = "LICENSE"}
keywords = ["script", "logging", "healthchecks.io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/rveachkc/rv-script-utils"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "ruff>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools_scm]
version_file = "src/rv_script_lib/_version.py"
local_scheme = "no-local-version"
